force-app/main/default/objects/Session__c/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <label>Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program/Case Management</fullName>
            </value>
            <value>
                <fullName>Fundraising/Development</fullName>
            </value>
            <value>
                <fullName>Volunteer Management</fullName>
            </value>
            <value>
                <fullName>Fund Distribution/Grantmaking</fullName>
            </value>
            <value>
                <fullName>Marketing/Outreach</fullName>
            </value>
            <value>
                <fullName>Impact/Outcome Measurements</fullName>
            </value>
            <value>
                <fullName>Career/Personal Branding</fullName>
            </value>
            <value>
                <fullName>Admin/Declarative Developer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Reporting/Analytics</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>