force-app/main/default/objects/Session__c/fields/Requested_Room_Size__c.field-meta.xml
<CustomField>
    <fullName>Requested_Room_Size__c</fullName>
    <label>Requested Room Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small (under 50)</fullName>
            </value>
            <value>
                <fullName>Medium (50-150)</fullName>
            </value>
            <value>
                <fullName>Large (151+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>