force-app/main/default/objects/Session__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <formula>IF( Session_Slot_Count__c &gt;0, TRUE, FALSE)</formula>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>