force-app/main/default/objects/Session__c/fields/Session_Length_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Length_Minutes__c</fullName>
    <label>Session Length (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>