force-app/main/default/objects/Session__c/fields/Session_Scheduled_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Session_Scheduled_Placeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox until we can create a rollup field/formula</description>
    <label>Session Scheduled Placeholder</label>
    <type>Checkbox</type>
</CustomField>