force-app/main/default/objects/Session__c/fields/Session_Slot_Count__c.field-meta.xml
<CustomField>
    <fullName>Session_Slot_Count__c</fullName>
    <label>Session Slot Count</label>
    <summaryForeignKey>Session_Slot__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>