force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event__c</columns>
    <columns>Focus__c</columns>
    <columns>Format__c</columns>
    <columns>Requested_Room_Size__c</columns>
    <columns>Session_Length_Minutes__c</columns>
    <columns>Scheduled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>